--- a/watchesbackend/pom.xml
+++ b/watchesbackend/pom.xml
@@ -51,6 +51,13 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.4.1.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -70,34 +77,34 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
-   <groupId>org.glassfish.web</groupId>
-   <artifactId>javax.el</artifactId>
-   <version>2.2.4</version>
-</dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>2.2.4</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-<dependency>
-    <groupId>commons-fileupload</groupId>
-    <artifactId>commons-fileupload</artifactId>
-    <version>1.3.2</version>
-</dependency>
-		
-		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
-	<plugins>
-	<plugin>
-	<artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-        <source>1.8</source>
-        <target>1.8</target>
-        </configuration>
-	
-	
-	</plugin>
-	
-	
-	</plugins>
-	
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+
+
+			</plugin>
+
+
+		</plugins>
+
 	</build>
 </project>
