--- a/watchesfrontend/src/main/webapp/WEB-INF/web.xml
+++ b/watchesfrontend/src/main/webapp/WEB-INF/web.xml
@@ -16,13 +16,25 @@
   </servlet>
   <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+        <param-value>/WEB-INF/dispatcher-servlet.xml,/WEB-INF/spring-security.xml</param-value>
         </context-param>
 
   <servlet-mapping>
  	<servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+ <!-- Spring Security  Filter -->
+<filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+</filter>
+ 
+<filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+</filter-mapping>
+
   <listener>
   <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
