--- a/watchesbackend/pom.xml
+++ b/watchesbackend/pom.xml
@@ -21,6 +21,7 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Spring dependencies -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -39,6 +40,7 @@
 			<artifactId>spring-orm</artifactId>
 			<version>4.3.7.RELEASE</version>
 		</dependency>
+		<!-- Hibernate dependencies -->
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -81,6 +83,7 @@
 			<artifactId>javax.el</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		<!-- File upload-Image -->
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
