--- a/watchesfrontend/pom.xml
+++ b/watchesfrontend/pom.xml
@@ -89,6 +89,12 @@
     <version>4.1.2.RELEASE</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.3</version>
+</dependency>
 
 		
 	</dependencies>
