--- a/watchesfrontend/pom.xml
+++ b/watchesfrontend/pom.xml
@@ -95,6 +95,11 @@
     <artifactId>commons-io</artifactId>
     <version>2.3</version>
 </dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.1</version>
+</dependency>
 
 		
 	</dependencies>
